--- a/scnmap/application.properties
+++ b/scnmap/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Sat Apr 14 10:04:40 BST 2012
+#Sat Apr 14 13:42:17 BST 2012
 app.grails.version=2.0.3
 app.name=scnmap
 app.servlet.version=2.5
 app.version=0.1
 plugins.spring-security-core=1.2.7.3
 plugins.spring-security-twitter=0.4
+plugins.svn=1.0.2
